--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lml-homes",
   "version": "0.1.0",
   "private": true,
+  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -20,6 +21,7 @@
     "jquery": "^3.7.0",
     "lodash.debounce": "^4.0.8",
     "next": "13.4.12",
+    "next-sitemap": "^4.2.3",
     "otp-input-react": "^0.3.0",
     "react": "18.2.0",
     "react-18-image-lightbox": "^5.1.4",
