--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "lml-homes",
   "version": "0.1.0",
   "private": true,
-  
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -32,6 +31,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.12.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^10.0.4"
+    "swiper": "^10.0.4",
+    "yet-another-react-lightbox": "^3.21.6"
   }
 }
