--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "google-map-react": "^2.2.1",
     "jquery": "^3.7.0",
     "lodash.debounce": "^4.0.8",
-    "next": "13.4.12",
+    "next": "^15.1.0",
     "next-sitemap": "^4.2.3",
     "otp-input-react": "^0.3.0",
     "react": "18.2.0",
