--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "princevenkat.github.io/lmlhomes",
+  "homepage": "https://princevenkat.github.io/lmlhomes",
   "name": "lml-homes",
   "version": "0.1.0",
   "private": true,
